--- a/app/frontend/styles/tablet.css.scss
+++ b/app/frontend/styles/tablet.css.scss
@@ -15,6 +15,10 @@ body {
   display: none;
 }
 
+#top-bar {
+  display:none;
+}
+
 #controls {
   width: 100%;
   margin: 20px 0;
@@ -30,7 +34,7 @@ body {
 #now-playing {
   width: 100%;
   height: 350px;
-  margin-top: 180px;
+  // margin-top: 180px;
   padding: 25px 50px;
 
   .name {
